@@ -3,5 +3,5 @@ export(ciplt)
 export(ehf)
 export(isoplt)
 export(lsqf)
-export(tanh)
-export(tanhci)
+export(tnh)
+export(tnhci)
