@@ -1,14 +1,14 @@
 #' Calculate epsilon Hf values for Lu-Hf isochrons.
 #'
 #' This function calcalates epsilon Hf values from the intercept and age 
-#'   previously dertermined from \code{\link{lsqf}} or \code{\link{tanh}}
+#'   previously dertermined from \code{\link{lsqf}} or \code{\link{tnh}}
 #'   model regression.  Values for \eqn{^{176}}Hf/\eqn{^{177}}Hf = 0.282785 and \eqn{^{176}}Lu/\eqn{^{177}}Hf = 0.0336 
 #'   for CHUR (chondrite uniform reservoir) from Bouvier et al., 2008.
 #'
 #' @param a Intercept value taken from the intercept of the \code{\link{lsqf}} 
-#'   or \code{\link{tanh}} model regressions
+#'   or \code{\link{tnh}} model regressions
 #' @param age Age in Ma determined from the slope of the \code{\link{lsqf}} or 
-#'   \code{\link{tanh}} model regression
+#'   \code{\link{tnh}} model regression
 #' @return Numeric value of epsilon Hf.
 #' @references Bouvier, A., Vervoort, J.D., and Patchett, P.J., 2008, The Lu-Hf 
 #'   and Sm-Nd isotopic composition of CHUR: Constraints from unequilibrated 
