@@ -6,12 +6,11 @@
 }
 \arguments{
   \item{a}{Intercept value taken from the intercept of the
-  \code{\link{lsqf}} or \code{\link{tanh}} model
+  \code{\link{lsqf}} or \code{\link{tnh}} model
   regressions}
 
   \item{age}{Age in Ma determined from the slope of the
-  \code{\link{lsqf}} or \code{\link{tanh}} model
-  regression}
+  \code{\link{lsqf}} or \code{\link{tnh}} model regression}
 }
 \value{
   Numeric value of epsilon Hf.
@@ -19,11 +18,10 @@
 \description{
   This function calcalates epsilon Hf values from the
   intercept and age previously dertermined from
-  \code{\link{lsqf}} or \code{\link{tanh}} model
-  regression.  Values for \eqn{^{176}}Hf/\eqn{^{177}}Hf =
-  0.282785 and \eqn{^{176}}Lu/\eqn{^{177}}Hf = 0.0336 for
-  CHUR (chondrite uniform reservoir) from Bouvier et al.,
-  2008.
+  \code{\link{lsqf}} or \code{\link{tnh}} model regression.
+  Values for \eqn{^{176}}Hf/\eqn{^{177}}Hf = 0.282785 and
+  \eqn{^{176}}Lu/\eqn{^{177}}Hf = 0.0336 for CHUR
+  (chondrite uniform reservoir) from Bouvier et al., 2008.
 }
 \examples{
 data(pdp133)
